--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 *, *::before, *::after {
     box-sizing: border-box;
+    font-family: 'Courier', sans-serif;
 }
 
 body {
     margin: 0;
-    background: linear-gradient(to right, #00AAFF, #00FF6c);
+    background: linear-gradient(to right, #ff53bd, #44b4ff);
 }
 
 .calculator-grid {
